# openrouter-rs

./: CHANGELOG.md  Cargo.toml  README.md
crates/openrouter-cli/: Cargo.toml
docs/operations/: official-endpoint-test-matrix.md
examples/: create_image_generation.rs
specs/openrouter/: openapi-baseline.json  openapi-baseline.operations.json
src/: client.rs  lib.rs
src/api/: chat.rs  discovery.rs  images.rs  mod.rs  responses.rs
src/types/: tool.rs
tests/integration/: tools.rs
tests/unit/: chat_request.rs  client_domains.rs  discovery.rs  images.rs  mod.rs  responses.rs  tool_builder.rs
