[package]
name = "openrouter-rs"
version = "0.11.0"
edition = "2024"
rust-version = "1.85"
authors = ["luckywood <morrisliu1994@outlook.com>"]
description = "A type-safe OpenRouter Rust SDK"
license = "MIT"
repository = "https://github.com/realmorrisliu/openrouter-rs"
homepage = "https://github.com/realmorrisliu/openrouter-rs"
documentation = "https://docs.rs/openrouter-rs"
readme = "README.md"
keywords = ["openrouter", "ai", "sdk"]
categories = ["api-bindings", "web-programming::http-client"]

[workspace]
members = [".", "crates/openrouter-cli"]
resolver = "2"

[features]
default = []
legacy-completions = []

[dependencies]
dotenvy_macro = "0.15.7"
futures-util = "0.3.31"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
thiserror = "1.0"
urlencoding = "2.1.3"
derive_builder = "0.20.2"
schemars = { version = "1.0.4", features = ["derive"] }

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[example]]
name = "send_completion_request"
required-features = ["legacy-completions"]

[dev-dependencies]
axum = "0.8"
dotenvy = "0.15.7"
