[package]
name = "openrouter-cli"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "CLI for OpenRouter account and SDK workflows"
license = "MIT"
repository = "https://github.com/realmorrisliu/openrouter-rs"
homepage = "https://github.com/realmorrisliu/openrouter-rs"
documentation = "https://github.com/realmorrisliu/openrouter-rs/tree/main/crates/openrouter-cli"
readme = "README.md"
keywords = ["openrouter", "cli", "ai"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.37", features = ["derive"] }
openrouter-rs = { version = "0.11.0", path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8.20"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.19.1"
